--- a/src/App.css
+++ b/src/App.css
@@ -2,19 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background-color: #fff;
-  --text-color: #111;
-}
+/*:root {*/
+/*  --background-color: #fff;*/
+/*  --text-color: #111;*/
+/*}*/
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background-color: rgb(20, 20, 20);
-    --text-color: rgb(230, 230, 230);
-  }
-}
+/*@media (prefers-color-scheme: dark) {*/
+/*  :root {*/
+/*    --background-color: rgb(20, 20, 20);*/
+/*    --text-color: rgb(230, 230, 230);*/
+/*  }*/
+/*}*/
 
-body {
-  background-color: var(--background-color);
-  color: var(--text-color);
-}
+/*body {*/
+/*  background-color: var(--background-color);*/
+/*  color: var(--text-color);*/
+/*}*/
